--- a/Pruebas/KestaguaPagina/static/style.css
+++ b/Pruebas/KestaguaPagina/static/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #99e905;
+    background-color: #f4f4f4;
     text-align: center;
 }
 
@@ -11,13 +11,13 @@ body {
     margin: auto;
     overflow: hidden;
     padding: 40px;
-    background-color: rgba(0,123,123);
+    background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 h1{
-    color: #444;
+    color: #333;
 }
 
 p{
