--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -9,16 +9,16 @@
     />
   </head>
   <body>
-    <h1>Welcome to Kestagua</h1>
+    <div class="container">
+        <h1>Welcome to Kestagua</h1>
+        <u1 class="nav.menu">
+            <li><a href="/create-account">Crear una cuenta</a></li>
+            <li><a href="/login">Iniciar Sesion</a><li>
+            <li><a href="/contact">Contacto</a><li>
+            </ul>
 
-    <div class="container">
-      <h2>Crear una cuenta</h2>
-    </div>
-    <div class="container">
-      <h2>Iniciar sesión</h2>
-    </div>
-    <div class="container">
-      <h2>Contáctanos</h2>
+    
+    
     </div>
   </body>
 </html>
