--- a/Pruebas/KestaguaPagina/static/style.css
+++ b/Pruebas/KestaguaPagina/static/style.css
@@ -6,18 +6,53 @@ body {
     text-align: center;
 }
 
+
+.nav-menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.nav-menu li {
+    background: linear-gradient(120deg, #455f66,#829399);
+    margin-bottom: 8px;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.nav-menu li a {
+    display: block;
+    padding: 15px 20px;
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    transition: color 0.3s ease;
+}
+
+.nav-menu li:hover{
+    background: linear-gradient(120deg, #d0f4ea,#ebfcc2);
+}
+
+.nav-menu li:hover a{
+    color: #4b574a;
+}
+
+.nav-menu .active {
+    background-color: #b1cc74;
+}
+
 .container {
     width: 80%;
     margin: auto;
     overflow: hidden;
     padding: 40px;
-    background-color: #add8e6;
-    border-radius: 8px solid #ff4500;
+    background-color: #829399;
+    border-radius: 8px solid #d0f4ea;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 h1{
-    color: #333;
+    color: #545f66;
 }
 
 p{
