--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-        <h1>Welcome to Kestagua</h1>
+        <h1>Kestagua</h1>
         <u1 class="nav.menu">
             <li><a href="/create-account">Crear una cuenta</a></li>
             <li><a href="/login">Iniciar Sesion</a><li>
