--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -13,8 +13,8 @@
         <h1>Kestagua</h1>
         <u1 class="nav.menu">
             <li><a href="/create-account" class="menu-link">Crear una cuenta</a></li>
-            <li><a href="/login" class="menu-link">Iniciar Sesion</a><li>
-            <li><a href="/contact" class="menu-link">Contacto</a><li>
+            <li><a href="/login" class="menu-link">Iniciar Sesion</a></li>
+            <li><a href="/contact" class="menu-link">Contacto</a></li>
             </ul>
 
     
