--- a/Pruebas/KestaguaPagina/static/style.css
+++ b/Pruebas/KestaguaPagina/static/style.css
@@ -59,3 +59,14 @@ p{
     font-size: 1.2em;
     color: #666;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
