--- a/Pruebas/KestaguaPagina/templates/Registro.html
+++ b/Pruebas/KestaguaPagina/templates/Registro.html
@@ -6,15 +6,15 @@
   <body>
     <h1>Registros</h1>
     <h2>Diario - APROXIMADAMENTE</h2>
-    <p>{{ }}</p>
+    <p>{{ average_daily_consumption }}</p>
 
     <h2>En los últimos 15 días</h2>
-    <p>{{ }}</p>
+    <p>{{ average_fifteen_consumption }}</p>
 
     <h2>En los últimos 30 días</h2>
-    <p>{{ }}</p>
+    <p>{{ average_thirty_consumption }}</p>
 
     <h2>En los últimos 60 días</h2>
-    <p>{{ }}</p>
+    <p>{{ average_sixty_consumption }}</p>
   </body>
 </html>
