--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Kestagua</h1>
         <u1 class="nav-menu">
-            <li><a href="/create-account" class="menu-link">Crear una cuenta</a></li>
+            <li><a href="/crear-cuenta" class="menu-link">Crear una cuenta</a></li>
             <li><a href="/login" class="menu-link">Iniciar Sesion</a></li>
             <li><a href="/contact" class="menu-link">Contacto</a></li>
             </ul>
