--- a/Pruebas/KestaguaPagina/templates/crear-cuenta.html
+++ b/Pruebas/KestaguaPagina/templates/crear-cuenta.html
@@ -34,6 +34,10 @@
           <span class="details">Nombre</span>
           <input type="text" placeholder="Confirma tu contrasenia" required>
         </div>
+<br><br>
+        <div>
+          <button><a href="/">Regresar</a></button>
+        </div>
       </div>
     </form>
   </div>
