--- a/Pruebas/KestaguaPagina/templates/crear-cuenta.html
+++ b/Pruebas/KestaguaPagina/templates/crear-cuenta.html
@@ -10,7 +10,7 @@
     />
   </head>
 <body>
-  <div class="container">
+  <div class="container"> Hola
     <div class="title">Registro</div>
     <form action="#">
       <div class="detalles-usuario">
