--- a/Pruebas/KestaguaPagina/templates/crear-cuenta.html
+++ b/Pruebas/KestaguaPagina/templates/crear-cuenta.html
@@ -10,29 +10,34 @@
     />
   </head>
 <body>
-  <div class="container"> Hola
-    <div class="title">Registro</div>
+  <div class="container"> 
+    <div class="title"><h2>Registro</h2></div>
+    <br>
     <form action="#">
       <div class="detalles-usuario">
         <div class="input-box">
-          <span class="details">Nombre</span>
-          <input type="text" placeholder="Ingresa tu nombre" required>
+          <span class="details">Número de serie:</span>
+          <input type="text" placeholder="Ingrese el número de serie" required>
         </div>
+        <br>
         <div class="input-box">
-          <span class="details">Nombre</span>
-          <input type="text" placeholder="Ingresa tu email" required>
+          <span class="details">Nombre:  </span>
+          <input type="text" placeholder="Ingrese su nombre" required>
         </div>
+        <br>
         <div class="input-box">
-          <span class="details">Nombre</span>
-          <input type="text" placeholder="Ingresa tu Usuario" required>
+          <span class="details">Correo:</span>
+          <input type="text" placeholder="Ingrese su correo" required>
         </div>
+        <br>
         <div class="input-box">
-          <span class="details">Nombre</span>
-          <input type="text" placeholder="Ingresa tu contrasenia" required>
+          <span class="details">Contraseña:</span>
+          <input type="text" placeholder="Ingrese su contraseña" required>
         </div>
+        <br>
         <div class="input-box">
-          <span class="details">Nombre</span>
-          <input type="text" placeholder="Confirma tu contrasenia" required>
+          <span class="details">Confirme su contraseña:</span>
+          <input type="text" placeholder="Confirme su contraseña" required>
         </div>
 <br><br>
         <div>
