Los pocos cambios que hice

--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -9,16 +9,23 @@
     />
   </head>
   <body>
+    <div class="head2">
+      <div class="titulo1">Kestagua</div>
+      <div class="usua">
+        <ul class="lista">
+          <li class="ini"><a href="/login">Iniciar sesión</a></li>
+          <li class="reg"><a href="/crear-cuenta">Registro</a></li>
+        </ul>
+      </div>
+    </div>
     <div class="container">
-        <h1>Kestagua</h1>
-        <u1 class="nav-menu">
-            <li><a href="/crear-cuenta" class="menu-link">Crear una cuenta</a></li>
-            <li><a href="/login" class="menu-link">Iniciar Sesion</a></li>
-            <li><a href="/contact" class="menu-link">Contacto</a></li>
-            </ul>
-
-    
-    
+      <div class="minicon">
+        <h2>¡Bienvenido Usuario!</h2>
+        <p></p>
+      </div>
+      <div class="minicon2">
+        <h3>¿Quiénes somos?</h3>
+      </div>
     </div>
   </body>
 </html>
