--- a/Pruebas/KestaguaPagina/templates/crear-cuenta.html
+++ b/Pruebas/KestaguaPagina/templates/crear-cuenta.html
@@ -11,7 +11,7 @@
   </head>
 <body>
   <div class="container"> 
-    <div class="title"><h2>Registro</h2></div>
+    <div class="titulo2"><h1>Registro</h1></div>
     <br>
     <form action="#">
       <div class="detalles-usuario">
