Pagina de registro - Falta que ejecute Esto es puro diseño

--- a/Pruebas/KestaguaPagina/static/style.css
+++ b/Pruebas/KestaguaPagina/static/style.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -57,8 +57,23 @@ li a:hover {
     color: #fff;
     
 }
+
+.head2{
+    background-color: #ffffff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    height: 3em;
+    align-items: center;
+    box-shadow: 1px 1px 5px #353535;
+    animation-name: headani;
+    animation-duration: 1s;
+    animation-delay: 0.5;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
 .container {
-    width: 95%;
+    width: 93%;
     margin: 20px auto;
     overflow: hidden;
     padding: 40px;
@@ -74,21 +89,6 @@ li a:hover {
     display: flex;
 
 }
-.head2{
-    background-color: #ffffff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    height: 3em;
-    align-items: center;
-    box-shadow: 1px 1px 5px #353535;
-    animation-name: headani;
-    animation-duration: 1s;
-    animation-delay: 0.5;
-    opacity: 0;
-    animation-fill-mode: forwards;
-}
-
 .minicon{
     width: 20%;
     height: 400px;
@@ -103,7 +103,7 @@ li a:hover {
 .minicon2{
     box-shadow: 1px 1px 3px #a1a1a1;
     border-radius: 10px;
-    width: 60%;
+    width: 80%;
     padding: 5px;
 }
 
