--- a/Pruebas/KestaguaPagina/templates/crear-cuenta.html
+++ b/Pruebas/KestaguaPagina/templates/crear-cuenta.html
@@ -1,61 +1,249 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title> Creacion de cuenta </title>
-    <link 
-      rel="stylesheet"
-      type="text/css"
-      href="{{url_for('static', filename='style.css')}}"
-    />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <title>Formulario Registro</title>
+</head>
 <body>
-  <div class="container"> 
-    <div class="titulo2"><h1>Registro</h1></div>
-    <br>
-    <form action="#">
-      <div class="detalles-usuario">
-        <div class="input-box">
-          <span class="details">Número de serie:</span>
-          <input type="text" placeholder="Ingrese el número de serie" required>
-        </div>
-        <br>
-        <div class="input-box">
-          <span class="details">Nombre:  </span>
-          <input type="text" placeholder="Ingrese su nombre" required>
-        </div>
-        <br>
-        <div class="input-box">
-          <span class="details">Correo:</span>
-          <input type="text" placeholder="Ingrese su correo" required>
-        </div>
-        <br>
-        <div class="input-box">
-          <span class="details">Contraseña:</span>
-          <input type="text" placeholder="Ingrese su contraseña" required>
-        </div>
-        <br>
-        <div class="input-box">
-          <span class="details">Confirme su contraseña:</span>
-          <input type="text" placeholder="Confirme su contraseña" required>
-        </div>
-<br><br>
-        <div>
-          <button><a href="/">Regresar</a></button>
-        </div>
-      </div>
-    </form>
+  <div class="head2">
+    <div class="titulo1">
+      Kestagua</div>
+    <div class="usua">
+      <ul class="lista">
+        <li class="ini"><a href="/login">Iniciar sesión</a></li>
+        <li class="reg"><a href="/crear-cuenta">Registro</a></li>
+      </ul>
+    </div>
   </div>
+<form action="">
+ 
+  <section class="form-register">
+    <h4>Formulario de Registro</h4>
+    <br>  
+    <div class="inputs">
+      <div class="inputGroup">
+        <input type="text" required="" autocomplete="off" name="nombre" id="nombre">
+        <label for="name">Nombre</label>
+      </div>
+    </div>
+    <div class="inputs">
+      <div class="inputGroup">
+        <input type="text" required="" autocomplete="off" name="nombre" id="nombre">
+        <label for="name">Correo</label>
+      </div>
+    </div>
+    <div class="inputs">
+      <div class="inputGroup">
+        <input type="text" required="" autocomplete="off" name="nombre" id="nombre">
+        <label for="name">Contraseña</label>
+      </div>
+    </div>
+    <div class="inputs">
+      <div class="inputGroup">
+        <input type="text" required="" autocomplete="off" name="nombre" id="nombre">
+        <label for="name">Confirmar contraseña</label>
+      </div>
+    </div>
+    <br><br>
+    <p>Estoy de acuerdo con terminos y condiciones</p>
+    <input class="botons" type="submit" value="Registrar">
+    <p><a href="/login">¿Ya tengo Cuenta?</a></p>
+  </section>
+
+</form>
+
+</body>
+</html>
+
+<style>
+
+.inputs{
+.inputGroup {
+  font-family: 'Segoe UI', sans-serif;
+  margin: .1em 0 1em 0;
+  max-width: 190px;
+  position: relative;
+  
+}
+.inputGroup input {
+  font-size: 100%;
+  padding: 0.8em;
+  outline: none;
+  border: 2px solid rgb(200, 200, 200);
+  background-color: transparent;
+  border-radius: 20px;
+  width: 23em;
+}
+.inputGroup label {
+  font-size: 100%;
+  position: absolute;
+  left: 10px;
+  bottom: 15px;
+  margin-left: 0.5em;
+  pointer-events: none;
+  transition: all 0.3s ease;
+  color: rgb(100, 100, 100);
+}
+.inputGroup :is(input:focus, input:valid)~label {
+  transform: translateY(-50%) scale(.9);
+  margin: 1m;
+  margin-left: 1.3em;
+  padding: 0.56em;
+  background-color: #ffffff;
+  color: #91cdff;
+  font-size: 80%;
+}
+.inputGroup :is(input:focus, input:valid) {
+  border-color: #91cdff;
+  box-shadow: 1px 1px 2px #91cdff;
+}
+}
 
 
+.form-register {
+  width: 400px;
+  background: #ffffff;
+  padding: 30px;
+  margin: auto;
+  margin-top: 80px;
+  border-radius: 4px;
+  font-family: 'calibri';
+  color: #2d5168;
+  box-shadow: 1px 2px 10px #353535;
+  animation-name: formani;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+.form-register h4 {
+  font-size: 22px;
+  margin-bottom: 20px;
 
+}
+.form-register p {
+  height: 40px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 40px;
+}
+.form-register a {
+  color: #2d5168;
+  text-decoration: none;
+}
+.form-register a:hover {
+  color: #91cdff;
+  text-decoration: underline;
+}
+.form-register .botons {
+  width: 100%;
+  background: #2d5168;
+  border: none;
+  padding: 12px;
+  color: white;
+  margin: 16px 0;
+  font-size: 16px;
+  border-radius: 10px;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  background-color: #d3ebff;
+}
 
+.head2{
+    background-color: #ffffff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    height: 3em;
+    align-items: center;
+    box-shadow: 1px 1px 5px #353535;
+    animation-name: headani;
+    animation-duration: 1s;
+    animation-delay: .5s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    font-family: Arial, sans-serif;
+}
+.titulo1{
+    color: #2d5168; 
+    top: 50%;
+    font-size: 40px;
+    margin-left: 10px;
+    
+}
 
+.lista{
+    display: flex;
+    list-style: none;
+    margin-right: 15px;
+    position: relative;
+}
+.ini{
+    width: 120px;
+    color: #2d5168;
+    text-align: center;
+    padding: 15px 5px;
+    font-weight: bold;
+    margin-right: 20px;
+    box-shadow: 1px 1px 2px #a1a1a1;
+}
 
+.ini:hover{
+    background-color: #2fa1ff;
+    transition: background-color 1s ease;
+    transform: scale(1.1);
+}
+.reg{
+    width: 120px;
+    font-weight: bold;
+    text-align: center;
+    padding: 15px 5px;
+    box-shadow: 1px 1px 2px #a1a1a1;
+}
+.reg:hover{
+    background-color: #2fa1ff;
+    transition: background-color .5s ease;
+    transform: scale(1.1) ;
+}
 
+li a {
+    text-decoration: none;
+    color: #2d5168;
+}
+li a:hover {
+    transition: color .6s ease;
+    color: #fff;
+    
+}
+@keyframes headani{
+    0%{
+        opacity: 0;
+        transform: scale(1);
+    }
+    100% 
+    {
+        opacity: 1;
+        transform: scale(1);
+    }        
+}
+@keyframes formani{
+    0%{
+        opacity: 0;
+        transform: scale(1);
+    }
+    100% 
+    {
+        opacity: 1;
+        transform: scale(1);
+    }        
+}
 
-
-
-  </html>
-
+</style>
