--- a/Pruebas/KestaguaPagina/templates/crear-cuenta.html
+++ b/Pruebas/KestaguaPagina/templates/crear-cuenta.html
@@ -6,21 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>Formulario Registro</title>
+  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </head>
 <body>
   <div class="head2">
-    <div class="titulo1">
-      Kestagua</div>
+    <div class="titulo1">Kestagua</div>
     <div class="usua">
       <ul class="lista">
-        <li class="ini"><a href="/login">Iniciar sesión</a></li>
-        <li class="reg"><a href="/crear-cuenta">Registro</a></li>
+        <li><button class="ini" onclick="window.location.href='/login'">Iniciar sesión</button></li>
+        <li><button class="reg" onclick="window.location.href='/crear-cuenta'">Registro</button></li>
       </ul>
     </div>
   </div>
+  
+ 
+
 <form action="">
  
   <section class="form-register">
+
+    <button class="flecha" onclick="window.location.href='/'"><ion-icon name="return-left"></ion-icon></button> 
     <h4>Formulario de Registro</h4>
     <br>  
     <div class="inputs">
@@ -47,21 +52,78 @@
         <label for="name">Confirmar contraseña</label>
       </div>
     </div>
+</form>
     <br><br>
     <p>Estoy de acuerdo con terminos y condiciones</p>
     <input class="botons" type="submit" value="Registrar">
     <p><a href="/login">¿Ya tengo Cuenta?</a></p>
+  
+
+<!-- Boton de regreso, se ve mejjor la flecha  <center><a href="/" class="boton">Regresar</a></center> -->
+
   </section>
 
-</form>
+
 
 </body>
 </html>
 
 <style>
 
+.flecha{
+  position: relative;
+  padding: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 30px;
+  background-color: #fff;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: 1px 2px 5px #353535;
+  border: none;
+  padding-top: 15px;
+  cursor: pointer;
+  transition: 0.4s;
+  color: #2d5168;
+  right: 120px;
+  top: 180px;
+}
+.flecha:hover{
+  box-shadow: 7px 5px 36px -5px #000000;
+  transform: scale(1.1);
+  background-color: #2d5168;
+  color: #fff;
+}
+
+
+
+/* Boton de regreso, esta mejor la flecha
+
+.boton{
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-radius: 20px;
+  background: #fff;
+  border: none;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.4s;
+  border: 2px solid #2d5168;
+  text-decoration: none;
+}
+.boton:hover {
+  box-shadow: 7px 5px 36px -5px #000000;
+  text-decoration: none;
+}
+*/
+
+
+
 .inputs{
-.inputGroup {
+
+.inputGroup{
   font-family: 'Segoe UI', sans-serif;
   margin: .1em 0 1em 0;
   max-width: 190px;
@@ -108,16 +170,17 @@
   background: #ffffff;
   padding: 30px;
   margin: auto;
-  margin-top: 80px;
+  margin-top: 30px;
   border-radius: 4px;
   font-family: 'calibri';
   color: #2d5168;
   box-shadow: 1px 2px 10px #353535;
-  animation-name: formani;
+  /*animation-name: formani;
   animation-duration: 1s;
   animation-delay: 1s;
   opacity: 0;
-  animation-fill-mode: forwards;
+  animation-fill-mode: forwards;*/
+  padding-top: 0px;
 }
 .form-register h4 {
   font-size: 22px;
@@ -138,6 +201,7 @@
   color: #91cdff;
   text-decoration: underline;
 }
+
 .form-register .botons {
   width: 100%;
   background: #2d5168;
@@ -147,7 +211,18 @@
   margin: 16px 0;
   font-size: 16px;
   border-radius: 10px;
+  cursor: pointer;
+  transition: .4s;
 }
+.form-register .botons:hover{
+  box-shadow: 7px 5px 36px -5px #000000;
+  transform: scale(1.1);
+  background-color: #ffffff;
+  color: #2d5168;
+  border: solid 1px #2d5168;
+
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -165,11 +240,11 @@ body {
     height: 3em;
     align-items: center;
     box-shadow: 1px 1px 5px #353535;
-    animation-name: headani;
+    /*animation-name: headani;
     animation-duration: 1s;
     animation-delay: .5s;
     opacity: 0;
-    animation-fill-mode: forwards;
+    animation-fill-mode: forwards;*/
     font-family: Arial, sans-serif;
 }
 .titulo1{
@@ -194,12 +269,17 @@ body {
     font-weight: bold;
     margin-right: 20px;
     box-shadow: 1px 1px 2px #a1a1a1;
+    transition: 1s;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
 }
 
 .ini:hover{
-    background-color: #2fa1ff;
+    background-color: #2d5168;
+    color: #fff;
     transition: background-color 1s ease;
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 .reg{
     width: 120px;
@@ -207,22 +287,21 @@ body {
     text-align: center;
     padding: 15px 5px;
     box-shadow: 1px 1px 2px #a1a1a1;
-}
-.reg:hover{
-    background-color: #2fa1ff;
-    transition: background-color .5s ease;
-    transform: scale(1.1) ;
-}
-
-li a {
-    text-decoration: none;
+    transition: 1s;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
     color: #2d5168;
 }
-li a:hover {
-    transition: color .6s ease;
-    color: #fff;
-    
+.reg:hover{
+    background-color: #2d5168;
+    color: #fff;  
+    transition: background-color .5s ease;
+    transform: scale(1.2) ;
 }
+
+
+/*
 @keyframes headani{
     0%{
         opacity: 0;
@@ -245,5 +324,5 @@ li a:hover {
         transform: scale(1);
     }        
 }
-
+*/
 </style>
