--- a/Pruebas/KestaguaPagina/templates/login.html
+++ b/Pruebas/KestaguaPagina/templates/login.html
@@ -3,14 +3,311 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de Sesion</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Iniciar sesión</title>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </head>
 <body>
-<center>
-    <h1>Inicio de sesion</h1>
+<div class="head2">
+    <div class="titulo1">
+        Kestagua</div>
+    <div class="usua">
+        <ul class="lista">
+            <li><button class="ini" onclick="window.location.href='/login'">Iniciar sesión</button></li>
+            <li><button class="reg" onclick="window.location.href='/crear-cuenta'">Registro</button></li>
+        </ul>
+    </div>
+</div>
 
-<br><br><br>
-    <button><a href="/">Regresar</a></button>
-</center>
+<form action="">
+
+    <section class="form-register">
+
+        <button class="flecha" onclick="window.location.href='/'"><ion-icon name="return-left"></ion-icon></button> 
+        <h4>Inicio de sesión</h4>
+        <br>  
+        <div class="inputs">
+        <div class="inputGroup">
+            <input type="text" required="" autocomplete="off" name="correo" id="correo">
+            <label for="name">Correo</label>
+        </div>
+        <div class="inputGroup">
+            <input type="text" required="" autocomplete="off" name="contra" id="contra">
+            <label for="name">Contraseña</label>
+        </div>
+
+        </div>
+    </form>
+        <br><br>
+        <input class="botons" type="submit" value="Iniciar sesión">
+        <p><a href="/crear-cuenta">Crear cuenta</a></p>
+    
+
+    <!-- Boton de regreso, se ve mejjor la flecha  <center><a href="/" class="boton">Regresar</a></center> -->
+
+    </section>
+
+
+
 </body>
 </html>
+
+<style>
+
+    .flecha{
+    position: relative;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 30px;
+    background-color: #fff;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 1px 2px 5px #353535;
+    border: none;
+    padding-top: 15px;
+    cursor: pointer;
+    transition: 0.4s;
+    color: #2d5168;
+    right: 120px;
+    top: 180px;
+    }
+    .flecha:hover{
+    box-shadow: 7px 5px 36px -5px #000000;
+    transform: scale(1.1);
+    background-color: #2d5168;
+    color: #fff;
+    }
+
+
+
+    /* Boton de regreso, esta mejor la flecha
+
+    .boton{
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-radius: 20px;
+    background: #fff;
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.4s;
+    border: 2px solid #2d5168;
+    text-decoration: none;
+    }
+    .boton:hover {
+    box-shadow: 7px 5px 36px -5px #000000;
+    text-decoration: none;
+    }
+    */
+
+
+
+    .inputs{
+
+    .inputGroup{
+    font-family: 'Segoe UI', sans-serif;
+    margin: .1em 0 1em 0;
+    max-width: 190px;
+    position: relative;
+    
+    }
+    .inputGroup input {
+    font-size: 100%;
+    padding: 0.8em;
+    outline: none;
+    border: 2px solid rgb(200, 200, 200);
+    background-color: transparent;
+    border-radius: 20px;
+    width: 23em;
+    }
+    .inputGroup label {
+    font-size: 100%;
+    position: absolute;
+    left: 10px;
+    bottom: 15px;
+    margin-left: 0.5em;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    color: rgb(100, 100, 100);
+    }
+    .inputGroup :is(input:focus, input:valid)~label {
+    transform: translateY(-50%) scale(.9);
+    margin: 1m;
+    margin-left: 1.3em;
+    padding: 0.56em;
+    background-color: #ffffff;
+    color: #91cdff;
+    font-size: 80%;
+    }
+    .inputGroup :is(input:focus, input:valid) {
+    border-color: #91cdff;
+    box-shadow: 1px 1px 2px #91cdff;
+    }
+    }
+
+
+    .form-register {
+    width: 400px;
+    background: #ffffff;
+    padding: 30px;
+    margin: auto;
+    margin-top: 30px;
+    border-radius: 4px;
+    font-family: 'calibri';
+    color: #2d5168;
+    box-shadow: 1px 2px 10px #353535;
+    /*animation-name: formani;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    opacity: 0;
+    animation-fill-mode: forwards;*/
+    padding-top: 0px;
+    }
+    .form-register h4 {
+    font-size: 22px;
+    margin-bottom: 20px;
+
+    }
+    .form-register p {
+    height: 40px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 40px;
+    }
+    .form-register a {
+    color: #2d5168;
+    text-decoration: none;
+    }
+    .form-register a:hover {
+    color: #91cdff;
+    text-decoration: underline;
+    }
+
+    .form-register .botons {
+    width: 100%;
+    background: #2d5168;
+    border: none;
+    padding: 12px;
+    color: white;
+    margin: 16px 0;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .4s;
+    }
+    .form-register .botons:hover{
+    box-shadow: 7px 5px 36px -5px #000000;
+    transform: scale(1.1);
+    background-color: #ffffff;
+    color: #2d5168;
+    border: solid 1px #2d5168;
+
+    }
+
+    * {
+    margin: 0;
+    padding: 0;
+    }
+
+    body {
+    background-color: #d3ebff;
+    }
+
+.head2{
+    background-color: #ffffff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    height: 3em;
+    align-items: center;
+    box-shadow: 1px 1px 5px #353535;
+    /*animation-name: headani;
+    animation-duration: 1s;
+    animation-delay: .5s;
+    opacity: 0;
+    animation-fill-mode: forwards;*/
+    font-family: Arial, sans-serif;
+}
+.titulo1{
+    color: #2d5168; 
+    top: 50%;
+    font-size: 40px;
+    margin-left: 10px;
+    
+}
+
+.lista{
+    display: flex;
+    list-style: none;
+    margin-right: 15px;
+    position: relative;
+}
+.ini{
+    width: 120px;
+    color: #2d5168;
+    text-align: center;
+    padding: 15px 5px;
+    font-weight: bold;
+    margin-right: 20px;
+    box-shadow: 1px 1px 2px #a1a1a1;
+    transition: 1s;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.ini:hover{
+    background-color: #2d5168;
+    color: #fff;
+    transition: background-color 1s ease;
+    transform: scale(1.2);
+}
+.reg{
+    width: 120px;
+    font-weight: bold;
+    text-align: center;
+    padding: 15px 5px;
+    box-shadow: 1px 1px 2px #a1a1a1;
+    transition: 1s;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+    color: #2d5168;
+}
+.reg:hover{
+    background-color: #2d5168;
+    color: #fff;  
+    transition: background-color .5s ease;
+    transform: scale(1.2) ;
+}
+
+
+/*
+@keyframes headani{
+    0%{
+        opacity: 0;
+        transform: scale(1);
+    }
+    100% 
+    {
+        opacity: 1;
+        transform: scale(1);
+    }        
+}
+@keyframes formani{
+    0%{
+        opacity: 0;
+        transform: scale(1);
+    }
+    100% 
+    {
+        opacity: 1;
+        transform: scale(1);
+    }        
+}
+*/
+</style>
