--- a/Pruebas/KestaguaPagina/templates/login.html
+++ b/Pruebas/KestaguaPagina/templates/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Iniciar sesión</title>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <link rel="shortcut icon" href="Logo2.jpg" type="image/x-icon">
 </head>
 <body>
 <div class="head2">
@@ -150,7 +151,7 @@
     }
 
 
-    .form-register {
+.form-register {
     width: 400px;
     background: #ffffff;
     padding: 30px;
@@ -160,13 +161,30 @@
     font-family: 'calibri';
     color: #2d5168;
     box-shadow: 1px 2px 10px #353535;
-    /*animation-name: formani;
-    animation-duration: 1s;
-    animation-delay: 1s;
+    animation-name: formani;
+    animation-duration: 4s;
+    animation-delay: 1;
     opacity: 0;
-    animation-fill-mode: forwards;*/
+    animation-fill-mode: forwards;
     padding-top: 0px;
-    }
+}
+.head2{
+    background-color: #ffffff;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    height: 3em;
+    align-items: center;
+    box-shadow: 1px 1px 5px #353535;
+    animation-name: headani;
+    animation-duration: 4s;
+    animation-delay: 1;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    font-family: Arial, sans-serif;
+}
+
+
     .form-register h4 {
     font-size: 22px;
     margin-bottom: 20px;
@@ -217,21 +235,6 @@
     background-color: #d3ebff;
     }
 
-.head2{
-    background-color: #ffffff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    height: 3em;
-    align-items: center;
-    box-shadow: 1px 1px 5px #353535;
-    /*animation-name: headani;
-    animation-duration: 1s;
-    animation-delay: .5s;
-    opacity: 0;
-    animation-fill-mode: forwards;*/
-    font-family: Arial, sans-serif;
-}
 .titulo1{
     color: #2d5168; 
     top: 50%;
@@ -286,7 +289,7 @@
 }
 
 
-/*
+
 @keyframes headani{
     0%{
         opacity: 0;
@@ -309,5 +312,5 @@
         transform: scale(1);
     }        
 }
-*/
+
 </style>
