--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -4,6 +4,7 @@
     <title>Kestagua</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Logo2.jpg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="head2">
@@ -28,8 +29,49 @@
       <div class="carga">
         <h1>Bienvenido a Kestagua</h1>
       </div>
+
+      <footer class="pie-pagina">
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="Logo.png" alt="Kestagua">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="red-social">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="grupo-2">
+            <small>&copy; 2024 <b>SLee Dw</b> - Todos los Derechos Reservados.</small>
+        </div>
+    </footer>
   </body>
 </html>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    var fecha = new Date();
+    var ano = fecha.getFullYear();
+    var mes = fecha.getMonth() + 1;
+    var dia = fecha.getDate();
+    var fechaActual = dia + '/' + mes + '/' + ano;
+    var elementoFecha = document.getElementById("fecha-actualizacion");
+    elementoFecha.innerHTML = 'Última actualización: ' + fechaActual;
+  });
+</script>
 
 <style>
   body {
@@ -55,25 +97,7 @@
   position: absolute;
 }
 
-@keyframes carga {
-  0%{
-    opacity: 1;
-    transform: scale(1);
-    width: max-content;
-    height: max-content;
-    top: 30%;
-    left: 360px;
-  }
-  100%{
-    opacity: 0;
-    width: max-content;
-    height: 1px;
-    left: 360px;
-    top: 30%;
-    padding-top: 1px;
-    font-size: 1px;
-  }
-}
+
 
 .titulo1{
     color: #2d5168; 
@@ -199,4 +223,94 @@
         transform: scale(1);
     }        
 }
+@keyframes carga {
+  0%{
+    opacity: 1;
+    transform: scale(1);
+    width: max-content;
+    height: max-content;
+    top: 30%;
+    left: 360px;
+  }
+  100%{
+    opacity: 0;
+    width: max-content;
+    height: 1px;
+    left: 360px;
+    top: 30%;
+    padding-top: 1px;
+    font-size: 1px;
+  }
+}*/
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+/*:::::Pie de Pagina*/
+.pie-pagina{
+    width: 100%;
+    background-color: #0a141d;
+}
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img{
+    width: 250px;
+}
+.pie-pagina .grupo-1 .box h2{
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a{
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color: #0d2033;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover{
+    color: aqua;
+}
+.pie-pagina .grupo-2{
+    background-color: #0a1a2a;
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff;
+}
+.pie-pagina .grupo-2 small{
+    font-size: 15px;
+}
+@media screen and (max-width:800px){
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:30px;
+        padding: 35px 0px;
+    }
+}
+
+
+
 </style>
