Mini cambios para mostrar texto útil.

--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -20,6 +20,7 @@
     <div class="container">
       <div class="minicon">
         <h3>¿Quiénes somos?</h3>
+        <p>Nuestro compañero</p>
         <p></p>
       </div>
       <div class="minicon2">
@@ -35,17 +36,16 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="Logo.png" alt="Kestagua">
+                        <img src="templates/Logo.png" alt="Kestagua">
                     </a>
                 </figure>
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Gracias al programa Samsung Innovation Campus 2023, este proyecto consta de tres estudiantes de universidad cuyos conocimientos en la programación y el manejo en componentes electrónicos te presentan este gran producto para atender una problemática que nos afecta a todos. </p>
             </div>
             <div class="box">
-                <h2>SIGUENOS</h2>
+                <h2>SÍGUENOS</h2>
                 <div class="red-social">
                     <a href="#" class="fa fa-facebook"></a>
                     <a href="#" class="fa fa-instagram"></a>
@@ -270,12 +270,12 @@
     width: 250px;
 }
 .pie-pagina .grupo-1 .box h2{
-    color: #fff;
+    color: #020015;
     margin-bottom: 25px;
     font-size: 20px;
 }
 .pie-pagina .grupo-1 .box p{
-    color: #efefef;
+    color: #000211;
     margin-bottom: 10px;
 }
 .pie-pagina .grupo-1 .red-social a{
@@ -284,7 +284,7 @@
     width: 45px;
     height: 45px;
     line-height: 45px;
-    color: #fff;
+    color: #000000;
     margin-right: 10px;
     background-color: #0d2033;
     text-align: center;
