Botón funcional de registros :>

--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -20,11 +20,14 @@
     <div class="container">
       <div class="minicon">
         <h3>¿Quiénes somos?</h3>
-        <p>Nuestro compañero</p>
+        <p>Somos cuatro estudiantes de universidad cuyos conocimientos tomaron </p>
         <p></p>
       </div>
       <div class="minicon2">
         <h2>¡Bienvenido Usuario!</h2>
+        <ul class="lista">
+          <li><button class="reg" onclick="window.location.href='/registros'">Mostrar los Registros</button></li>
+        </ul>
       </div>
     </div>
       <div class="carga">
@@ -42,7 +45,7 @@
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Gracias al programa Samsung Innovation Campus 2023, este proyecto consta de tres estudiantes de universidad cuyos conocimientos en la programación y el manejo en componentes electrónicos te presentan este gran producto para atender una problemática que nos afecta a todos. </p>
+                <p>Gracias al programa Samsung Innovation Campus 2023, este proyecto consta de cuatro estudiantes de universidad cuyos conocimientos en la programación y el manejo en componentes electrónicos te presentan este gran producto para atender una problemática que nos afecta a todos. </p>
             </div>
             <div class="box">
                 <h2>SÍGUENOS</h2>
