Prueba de nuevo.

--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="minicon">
         <h3>¿Quiénes somos?</h3>
-        <p>Somos cuatro estudiantes de universidad cuyos conocimientos tomaron </p>
+        <p>Somos cuatro estudiantes de universidad que decidieron entrar en la convocatoria de Samsung Innovation Campus 2023</p>
         <p></p>
       </div>
       <div class="minicon2">
@@ -45,7 +45,7 @@
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Gracias al programa Samsung Innovation Campus 2023, este proyecto consta de cuatro estudiantes de universidad cuyos conocimientos en la programación y el manejo en componentes electrónicos te presentan este gran producto para atender una problemática que nos afecta a todos. </p>
+                <p>Este proyecto consta de cuatro estudiantes de universidad cuyos conocimientos en la programación y el manejo en componentes electrónicos te presentan este gran producto para atender una problemática que nos afecta a todos. </p>
             </div>
             <div class="box">
                 <h2>SÍGUENOS</h2>
