ISAÍAS, CÁLALO JSJASJ

--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -20,14 +20,36 @@
     <div class="container">
       <div class="minicon">
         <h3>¿Quiénes somos?</h3>
-        <p>Somos cuatro estudiantes de universidad que decidieron entrar en la convocatoria de Samsung Innovation Campus 2023</p>
-        <p></p>
+        <p>Somos cuatro estudiantes de universidad que decidieron entrar en la convocatoria de Samsung Innovation Campus 2023 y aprovecharon el curso para aprender sobre el IoT para crear este grandioso proyecto.</p>
+        <p>Integrantes:</p>
+        <p>   Jesús Eduardo Campos Garibay</p>
+        <p>   Axl Gil Islas</p>
+        <p>   Amauri Valenzuela Garzon</p>
+        <p>   Isaías Hernández Astorga</p>
+
       </div>
       <div class="minicon2">
-        <h2>¡Bienvenido Usuario!</h2>
-        <ul class="lista">
+        <h1>¡Bienvenido, Isaías Hernández Astorga!</h1>
+        <!--<ul class="lista">
           <li><button class="reg" onclick="window.location.href='/registros'">Mostrar los Registros</button></li>
-        </ul>
+        </ul> -->
+        <head>
+        <h2>Registros</h2>
+        </head>
+        <body>
+          <!--<h1>Registros</h1>-->
+          <h2>Diario - APROXIMADAMENTE</h2>
+          <p>{{ average_daily_consumption }}</p>
+      
+          <h2>En los últimos 15 días</h2>
+          <p>{{ average_fifteen_consumption }}</p>
+      
+          <h2>En los últimos 30 días</h2>
+          <p>{{ average_thirty_consumption }}</p>
+      
+          <h2>En los últimos 60 días</h2>
+          <p>{{ average_sixty_consumption }}</p>
+        </body>
       </div>
     </div>
       <div class="carga">
