--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -39,11 +39,7 @@
                     </a>
                 </figure>
             </div>
-            <div class="box">
-                <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-            </div>
+            
             <div class="box">
                 <h2>SIGUENOS</h2>
                 <div class="red-social">
@@ -247,15 +243,15 @@
 
 /*:::::Pie de Pagina*/
 .pie-pagina{
-    width: 100%;
-    background-color: #0a141d;
+    width: 80%;
+    background-color: #000000;
 }
 .pie-pagina .grupo-1{
     width: 100%;
     max-width: 1200px;
     margin: auto;
     display:grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap:50px;
     padding: 45px 0px;
 }
