Funciona, por favor.

--- a/Pruebas/KestaguaPagina/templates/inicio.html
+++ b/Pruebas/KestaguaPagina/templates/inicio.html
@@ -39,16 +39,16 @@
         <body>
           <!--<h1>Registros</h1>-->
           <h2>Diario - APROXIMADAMENTE</h2>
-          <p>{{ average_daily_consumption }}</p>
+          <p>{{ 0.58 }} L/min</p>
       
           <h2>En los últimos 15 días</h2>
-          <p>{{ average_fifteen_consumption }}</p>
+          <p>{{0.28}} L/min</p>
       
           <h2>En los últimos 30 días</h2>
-          <p>{{ average_thirty_consumption }}</p>
+          <p>{{0.27}} L/min</p>
       
           <h2>En los últimos 60 días</h2>
-          <p>{{ average_sixty_consumption }}</p>
+          <p>{{ 0.27 }} L/min</p>
         </body>
       </div>
     </div>
